# RasCAL-2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/linux/: action.yaml
.github/actions/windows-mac/: action.yaml
.github/workflows/: build_installer.yaml  integration_tests.yaml  unit_tests.yaml
doc/source/: conf.py  index.rst  plot.rst  project.rst
examples/: README.md  make_examples.py
examples/DSPC_custom_XY/: project.json
examples/DSPC_custom_layers/: project.json
examples/DSPC_standard_layers/: project.json
examples/absorption/: controls.json  project.json
examples/domains_custom_XY/: project.json
examples/domains_custom_layers/: project.json
examples/domains_standard_layers/: project.json
packaging/: build_exe.py
packaging/hooks/: hook-RATapi.py  hook-matlab.py  hook-ratapi.py
packaging/icons/: logo.icns
packaging/linux/: build_installer.sh  install.sh  readme.txt
packaging/windows/: build_installer.nsi
rascal2/: __init__.py  config.py  main.py  settings.py
rascal2/core/: __init__.py  commands.py  enums.py  readers.py  runner.py  settings.py
rascal2/dialogs/: custom_file_editor.py  matlab_setup_dialog.py  project_dialog.py  settings_dialog.py  startup_dialog.py
rascal2/static/: style.css
rascal2/ui/: model.py  presenter.py  view.py
rascal2/widgets/: __init__.py  controls.py  delegates.py  inputs.py  plot.py  project.py  startup.py  startup_widget.py  terminal.py
rascal2/widgets/project/: __init__.py  lists.py  models.py  project.py  tables.py
tests/: conftest.py  pytest.ini  test_config.py  test_controls.py  test_dialogs.py  test_inputs.py  test_model.py  test_presenter.py  test_project.py  test_settings.py  test_ui.py  test_view.py  test_widgets.py  utils.py
tests/core/: test_reader.py  test_runner.py  test_settings.py
tests/dialogs/: test_custom_file_editor.py  test_project_dialog.py
tests/ui/: test_model.py  test_presenter.py  test_view.py
tests/widgets/: test_controls.py  test_inputs.py  test_plot.py  test_terminal.py
tests/widgets/project/: test_lists.py  test_models.py  test_project.py
