[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rascal2"
dynamic = ["version"]
dependencies = [
  "RATapi",
  "PyQt6",
]
description = "RasCAL2: GUI for Reflectivity Algorithm Toolbox (RAT)"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Documentation = "https://rascalsoftware.github.io/RAT/master/index.html"
Repository = "https://github.com/RascalSoftware/RasCAL-2"

[tool.setuptools.dynamic]
version = {attr = "rascal2.RASCAL2_VERSION"}

[tool.ruff]
line-length = 120
extend-exclude = ["examples/*", "doc/*"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "N", "TD003", "A"]
ignore = ["SIM108", "N817"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pep8-naming]
# if overriding a PyQt method, please add it here!
# names should be in alphabetical order for readability
extend-ignore-names = ['allKeys',
                       'addItem',
                       'addItems',
                       'columnCount',
                       'createEditor',
                       'eventFilter',
                       'headerData',
                       'mergeWith',
                       'resizeEvent',
                       'rowCount',
                       'setData',
                       'setEditorData',
                       'setModelData',
                       'setValue',
                       'showEvent',
                       'sizeHint',
                       'stepBy',
                       'supportedDropActions',
                       'textFromValue',
                       'valueFromText',]
